<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".activity.RegisterActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:src="@drawable/view_m_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="5dp"
        android:text="@string/nick_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edtNickName"
        app:layout_constraintStart_toStartOf="@id/edtNickName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/back_white_corners"
        android:hint="@string/nick_name"
        android:padding="13dp"
        android:textColor="#6F0F0F12"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="5dp"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/edtEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/back_white_corners"
        android:hint="@string/enter_email"
        android:padding="13dp"
        android:textColor="#6F0F0F12"
        app:layout_constraintTop_toBottomOf="@+id/edtNickName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="5dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edtPasswordRegister"
        app:layout_constraintStart_toStartOf="@id/edtPasswordRegister" />

    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="textPassword"
        android:id="@+id/edtPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/back_white_corners"
        android:hint="@string/enter_password"
        android:padding="13dp"
        android:textColor="#6F0F0F12"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="5dp"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edtConfirmPasswordRegister"
        app:layout_constraintStart_toStartOf="@id/edtConfirmPasswordRegister" />

    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="textPassword"
        android:id="@+id/edtConfirmPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/back_white_corners"
        android:hint="@string/confirm_password"
        android:padding="13dp"
        android:textColor="#6F0F0F12"
        app:layout_constraintTop_toBottomOf="@id/edtPasswordRegister" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/phone_munber"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edtPhoneNumberRegister"
        app:layout_constraintStart_toStartOf="@id/edtPhoneNumberRegister" />
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="number"
        android:id="@+id/edtPhoneNumberRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/back_white_corners"
        android:hint="Phone Number"
        android:padding="13dp"
        android:textColor="#6F0F0F12"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmPasswordRegister"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateRegister"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_create_an_account"
        android:text="@string/create_an_account"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnCreateRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Login account"/>


</androidx.constraintlayout.widget.ConstraintLayout>