<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:src="@drawable/view_m_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="5dp"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edtEmailLogin"
        app:layout_constraintStart_toStartOf="@id/edtEmailLogin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/back_white_corners"
        android:hint="@string/enter_email"
        android:padding="13dp"
        android:textColor="#6F0F0F12"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="5dp"
        android:text="Password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edtPasswordLogin"
        app:layout_constraintStart_toStartOf="@id/edtPasswordLogin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="textPassword"
        android:id="@+id/edtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/back_white_corners"
        android:hint="@string/enter_password"
        android:padding="13dp"
        android:textColor="#6F0F0F12"
        app:layout_constraintTop_toBottomOf="@id/edtEmailLogin" />


    <TextView
        android:id="@+id/tvResetPasswordInLogin"
        android:text="Reset Password"
        app:layout_constraintTop_toBottomOf="@id/edtPasswordLogin"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rdgRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordLogin"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdb_admin"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="Admin" />

        <RadioButton
            android:textStyle="bold"
            android:id="@+id/rdb_user"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:text="User" />
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateLogin"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_create_an_account"
        android:text="@string/login"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnCreateLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register_account"/>
</androidx.constraintlayout.widget.ConstraintLayout>